gsuiTitleUser: CSS, fix, text overflow-y + name.trim

--- a/gsuiTitleUser/gsuiTitleUser.css
+++ b/gsuiTitleUser/gsuiTitleUser.css
@@ -51,11 +51,15 @@ gsui-titleuser {
 .gsuiTitleUser-name {
 	overflow: hidden;
 	text-overflow: ellipsis;
+	margin-bottom: -5px;
 	font-weight: bold;
 	font-size: 14px;
+
+	&:empty {
+		display: none;
+	}
 }
 .gsuiTitleUser-username {
-	margin-top: -5px;
 	font-size: 10px;
 	opacity: .8;
 
